--- a/index.css
+++ b/index.css
@@ -116,5 +116,59 @@ body{
 .menu{
     width: 100%;
     height: 81px;
-    background-color: rgba(255, 255, 255, 0.92);
+    background-color: #fff;
+    padding: 0px 15px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.menu__logo{
+    width: 190px;
+    height: 79px;
+    background-color: red;
+}
+
+.menu__slogon{
+    width: 380px;
+    height: 79px;
+    /* background-color: green; */
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.menu__box{
+    width: 598.11px;
+    height: 79px;
+}
+
+.menu__list{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; 
+    margin: 0px;
+}
+
+.menu__bottun{
+    list-style: none;
+    padding: 28px 15px 27px;
+    /* display: inline-flex; */
+    display: block;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
+.menu__bottun:hover{
+
+    background-color: cornsilk;
+}
+
+.menu__a{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
