--- a/index.css
+++ b/index.css
@@ -112,6 +112,8 @@ body{
     margin: 0px;
     padding: 0px;
     width: 100%;
+    font-family: exotwo, sans-serif;
+    color: #333333;
 }
 
 .menu{
@@ -187,22 +189,64 @@ body{
     display: inline-flex; 
     justify-content: center;
     align-items: center;
+
 }
 .main__content{
-    width: 540px;
-    height: 360.25px; 
-    background-color: #21537cb6;     
+     
+    /* background-color: #21537cb6;      */
 }
 
 .main__photo{
-     
+    width: 540px;
+    height: 360.25px; 
     /* background-color: #eb722e;        */
 }
 
-
+.main__wraper{
+    width: 540px;
+    height: 381px;
+    padding: 0px 15px;
+}
 
 .main__photoRadio{
     width: 540px;
     height: 360.25px;
+}
+.main__text{
+    margin: 0px 0px 15px;
+}
+.main__text-h2{
+    font-size: 32px;   
+}
+.main__text-h3{
+    font-size: 28px;
+    margin: 0px 0px 15px;
+}
+.main__list{
+    display: inline-flex;    
+}
+.main__text-p{
+    color: #A2020D;
+}
+.main__text-span{
+    margin: 0px 0px 0px 0px; 
+    font-size: 18px;       
+}
 
+.main__list{
+    margin: 0px 15px;    
+}
+
+.main__ul{
+    margin: 0px 0px 16px;
+    padding: 0px 0px 0px 5px;
+}
+
+.main__wraper-ul{
+    width: 270px;
+    height: 136px;    
+}
+
+.main__li{
+    list-style: square outside;
 }
