--- a/index.css
+++ b/index.css
@@ -250,3 +250,10 @@ body{
 .main__li{
     list-style: square outside;
 }
+
+.product{
+    width: 100%;
+    height: 574px;
+    padding: 0px 50px;
+    background-color: #3b5998;
+}
