--- a/index.css
+++ b/index.css
@@ -255,5 +255,33 @@ body{
     width: 100%;
     height: 574px;
     padding: 0px 50px;
-    background-color: #3b5998;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    /* text-align: center; */
+}
+.product_container{
+    width: 1140px;
+    height: 574px;
+    /* text-align: center; */
+    /* display: inline-flex;
+    justify-content: center;
+    align-items: center;     */
+}
+
+.product__text-h2{
+    text-align: center;
+}
+.product__box-wraper{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;    
+}
+.product__box{  
+    width: 363.99px;
+    height: 488.51px;
+}
+.product__a{
+    width: 300px;
+    height: 300px;    
 }
