--- a/index.css
+++ b/index.css
@@ -281,7 +281,27 @@ body{
     width: 363.99px;
     height: 488.51px;
 }
-.product__a{
-    width: 300px;
+/* .product__a{
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    padding: 15px;
+    left: 0;
+    right: 0;
+    width: 362px;
     height: 300px;    
+} */
+
+.product__img{
+    width: 300px;
+    height: 300px;        
+}
+
+.product_text-h2{
+    text-align: center;
+    font-size: 28px;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin: 0px 0px 15px;
 }
